Initial support for Haiku.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,6 +58,10 @@ if(CMAKE_SYSTEM_NAME MATCHES "NetBSD")
   set(NETBSD TRUE)
 endif()
 
+if(CMAKE_SYSTEM_NAME MATCHES "Haiku")
+  set(HAIKU TRUE)
+endif()
+
 if(APPLE)
   include_directories(SYSTEM /usr/include/malloc)
   enable_language(ASM)
@@ -73,6 +77,9 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src/Platform/Android)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src/Platform/Posix)
 elseif(FREEBSD OR NETBSD OR OPENBSD)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src/Platform/FreeBSD)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src/Platform/Posix)
+elseif(HAIKU)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src/Platform/Haiku)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src/Platform/Posix)
 else()
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src/Platform/Linux)
@@ -98,7 +105,7 @@ else()
     # gcc for powerpc64 doesn't like variable-length arrays allocated on stack
     add_definitions("-DFORCE_USE_HEAP")
   endif()
-  if (${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
+  if (${CMAKE_SYSTEM_NAME} STREQUAL "Linux" OR HAIKU)
     # This option has no effect in glibc version less than 2.20.
     # Since glibc 2.20 _BSD_SOURCE is deprecated, this macro is recomended instead
     add_definitions("-D_DEFAULT_SOURCE" "-D_GNU_SOURCE")
@@ -239,7 +246,7 @@ endif()
 
 if(MINGW)
   set(Boost_LIBRARIES "${Boost_LIBRARIES};ws2_32;mswsock")
-elseif(APPLE OR OPENBSD OR ANDROID)
+elseif(APPLE OR OPENBSD OR ANDROID OR HAIKU)
   set(Boost_LIBRARIES "${Boost_LIBRARIES}")
 elseif(NOT MSVC)
   set(Boost_LIBRARIES "${Boost_LIBRARIES};rt")
@@ -294,7 +301,7 @@ else()
 endif()
 if(MINGW)
   set(EXTRA_LIBRARIES mswsock;ws2_32;iphlpapi)
-elseif(APPLE OR OPENBSD OR ANDROID)
+elseif(APPLE OR OPENBSD OR ANDROID OR HAIKU)
   set(EXTRA_LIBRARIES "")
 elseif(FREEBSD)
   set(EXTRA_LIBRARIES execinfo)
