--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -45,6 +45,8 @@ elseif(ANDROID)
   endif()
 elseif(FREEBSD OR NETBSD OR OPENBSD)
   file(GLOB_RECURSE System System/* Platform/FreeBSD/System/* Platform/Posix/System/*)
+elseif(HAIKU)
+  file(GLOB_RECURSE System System/* Platform/Haiku/System/* Platform/Posix/System/*)
 else()
   file(GLOB_RECURSE System System/* Platform/Linux/System/* Platform/Posix/System/*)
 endif()
